--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	//파일 다운로드에 필요함
+	implementation 'com.sun.activation:jakarta.activation:1.2.2'
+
 }
 
 tasks.named('test') {
