--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ spring:
       max-file-size: 100MB
       max-request-size: 100MB
   datasource:
-    url: jdbc:mysql://127.0.0.1/ctf?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://mysql:3306/ctf?serverTimezone=Asia/Seoul
     username: secuAdmin
     password: 1q2w3e4r!@
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -34,6 +34,10 @@ spring:
     hibernate:
       ddl-auto: update
     database: mysql
+  thymeleaf:
+    prefix: classpath:templates/
+    suffix: .html
+    cache: false
 logging:
   file:
     path: /home/ctf/log
