--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,7 +18,8 @@ spring:
       max-file-size: 100MB
       max-request-size: 100MB
   datasource:
-    url: jdbc:mysql://mysql:3306/ctf?serverTimezone=Asia/Seoul
+    #url: jdbc:mysql://mysql:3306/ctf?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3306/ctf?serverTimezone=Asia/Seoul
     username: secuAdmin
     password: 1q2w3e4r!@
     driver-class-name: com.mysql.cj.jdbc.Driver
